package NFactorSlice;

message TCodeGenInput {
    message TSliceDescriptor {
        required string Name = 1;
        optional uint32 NumFactors = 2;

        repeated TSliceDescriptor Slice = 100;
    }

    message TRoleDescriptor {
        required string Name = 1;
    }

    message TUniverseDescriptor {
        message TUniverseAssignDescriptor {
            required string Role = 1;
            required string Slice = 2;
        }

        required string Name = 1;
        repeated TUniverseAssignDescriptor Assign = 2;
    }

    repeated TSliceDescriptor Slice = 1;
    repeated TRoleDescriptor Role = 2;
    repeated TUniverseDescriptor Universe = 3;
}
